cfn_benchmark/cfn_templates/aws-samples__imdb-conversational-search-blog/cfn-template-imdb.yaml
Parameters:
  DomainNameopensearch:
    Type: String
    Description: The domain name for opensearch
    Default: 'imdb-opensearch'
  UserProfileName:
    Type: String
    Description: The user profile name for the SageMaker workshop
    Default: 'SageMakerUser'
  DomainName:
    Type: String
    Description: The domain name of the Sagemaker studio instance
    Default: 'imdbDomain'

Mappings:
  RegionMap:
    us-east-1:
      datascience: "arn:aws:sagemaker:us-east-1:081325390199:image/datascience-1.0"
      jupyter: "arn:aws:sagemaker:us-east-1:081325390199:image/jupyter-server-3"
      datawrangler: "arn:aws:sagemaker:us-east-1:663277389841:image/sagemaker-data-wrangler-1.0"
    us-east-2:
      datascience: "arn:aws:sagemaker:us-east-2:429704687514:image/datascience-1.0"
      jupyter: "arn:aws:sagemaker:us-east-2:429704687514:image/jupyter-server-3"
      datawrangler: "arn:aws:sagemaker:us-east-2:415577184552:image/sagemaker-data-wrangler-1.0"
    us-west-1:
      datascience: "arn:aws:sagemaker:us-west-1:742091327244:image/datascience-1.0"
      jupyter: "arn:aws:sagemaker:us-west-1:742091327244:image/jupyter-server-3"
      datawrangler: "arn:aws:sagemaker:us-west-1:926135532090:image/sagemaker-data-wrangler-1.0"
    us-west-2:
      datascience: "arn:aws:sagemaker:us-west-2:236514542706:image/datascience-1.0"
      jupyter: "arn:aws:sagemaker:us-west-2:236514542706:image/jupyter-server-3"
      datawrangler: "arn:aws:sagemaker:us-west-2:174368400705:image/sagemaker-data-wrangler-1.0"
    af-south-1:
      datascience: "arn:aws:sagemaker:af-south-1:559312083959:image/datascience-1.0"
      jupyter: "arn:aws:sagemaker:af-south-1:559312083959:image/jupyter-server-3"
      datawrangler: "arn:aws:sagemaker:af-south-1:143210264188:image/sagemaker-data-wrangler-1.0"
    ap-east-1:
      datascience: "arn:aws:sagemaker:ap-east-1:493642496378:image/datascience-1.0"
      jupyter: "arn:aws:sagemaker:ap-east-1:493642496378:image/jupyter-server-3"
      datawrangler: "arn:aws:sagemaker:ap-east-1:707077482487:image/sagemaker-data-wrangler-1.0"
    ap-south-1:
      datascience: "arn:aws:sagemaker:ap-south-1:394103062818:image/datascience-1.0"
      jupyter: "arn:aws:sagemaker:ap-south-1:394103062818:image/jupyter-server-3"
      datawrangler: "arn:aws:sagemaker:ap-south-1:089933028263:image/sagemaker-data-wrangler-1.0"
    ap-northeast-2:
      datascience: "arn:aws:sagemaker:ap-northeast-2:806072073708:image/datascience-1.0"
      jupyter: "arn:aws:sagemaker:ap-northeast-2:806072073708:image/jupyter-server-3"
      datawrangler: "arn:aws:sagemaker:ap-northeast-2:131546521161:image/sagemaker-data-wrangler-1.0"
    ap-southeast-1:
      datascience: "arn:aws:sagemaker:ap-southeast-1:492261229750:image/datascience-1.0"
      jupyter: "arn:aws:sagemaker:ap-southeast-1:492261229750:image/jupyter-server-3"
      datawrangler: "arn:aws:sagemaker:ap-southeast-1:119527597002:image/sagemaker-data-wrangler-1.0"
    ap-southeast-2:
      datascience: "arn:aws:sagemaker:ap-southeast-2:452832661640:image/datascience-1.0"
      jupyter: "arn:aws:sagemaker:ap-southeast-2:452832661640:image/jupyter-server-3"
      datawrangler: "arn:aws:sagemaker:ap-southeast-2:422173101802:image/sagemaker-data-wrangler-1.0"
    ap-northeast-1:
      datascience: "arn:aws:sagemaker:ap-northeast-1:102112518831:image/datascience-1.0"
      jupyter: "arn:aws:sagemaker:ap-northeast-1:102112518831:image/jupyter-server-3"
      datawrangler: "arn:aws:sagemaker:ap-northeast-1:649008135260:image/sagemaker-data-wrangler-1.0"
    ca-central-1:
      datascience: "arn:aws:sagemaker:ca-central-1:310906938811:image/datascience-1.0"
      jupyter: "arn:aws:sagemaker:ca-central-1:310906938811:image/jupyter-server-3"
      datawrangler: "arn:aws:sagemaker:ca-central-1:557239378090:image/sagemaker-data-wrangler-1.0"
    eu-central-1:
      datascience: "arn:aws:sagemaker:eu-central-1:936697816551:image/datascience-1.0"
      jupyter: "arn:aws:sagemaker:eu-central-1:936697816551:image/jupyter-server-3"
      datawrangler: "arn:aws:sagemaker:eu-central-1:024640144536:image/sagemaker-data-wrangler-1.0"
    eu-west-1:
      datascience: "arn:aws:sagemaker:eu-west-1:470317259841:image/datascience-1.0"
      jupyter: "arn:aws:sagemaker:eu-west-1:470317259841:image/jupyter-server-3"
      datawrangler: "arn:aws:sagemaker:eu-west-1:245179582081:image/sagemaker-data-wrangler-1.0"
    eu-west-2:
      datascience: "arn:aws:sagemaker:eu-west-2:712779665605:image/datascience-1.0"
      jupyter: "arn:aws:sagemaker:eu-west-2:712779665605:image/jupyter-server-3"
      datawrangler: "arn:aws:sagemaker:eu-west-2:894491911112:image/sagemaker-data-wrangler-1.0"
    eu-west-3:
      datascience: "arn:aws:sagemaker:eu-west-3:615547856133:image/datascience-1.0"
      jupyter: "arn:aws:sagemaker:eu-west-3:615547856133:image/jupyter-server-3"
      datawrangler: "arn:aws:sagemaker:eu-west-3:807237891255:image/sagemaker-data-wrangler-1.0"
    eu-north-1:
      datascience: "arn:aws:sagemaker:eu-north-1:243637512696:image/datascience-1.0"
      jupyter: "arn:aws:sagemaker:eu-north-1:243637512696:image/jupyter-server-3"
      datawrangler: "arn:aws:sagemaker:eu-north-1:054986407534:image/sagemaker-data-wrangler-1.0"
    eu-south-1:
      datascience: "arn:aws:sagemaker:eu-south-1:488287956546:image/datascience-1.0"
      jupyter: "arn:aws:sagemaker:eu-south-1:488287956546:image/jupyter-server-3"
      datawrangler: "arn:aws:sagemaker:eu-south-1:592751261982:image/sagemaker-data-wrangler-1.0"
    sa-east-1:
      datascience: "arn:aws:sagemaker:sa-east-1:782484402741:image/datascience-1.0"
      jupyter: "arn:aws:sagemaker:sa-east-1:782484402741:image/jupyter-server-3"
      datawrangler: "arn:aws:sagemaker:sa-east-1:424196993095:image/sagemaker-data-wrangler-1.0"

Resources:

  ## VPC
  PubPrivateVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16

  ## SUBNETS
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref PubPrivateVPC
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref 'AWS::Region'
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref PubPrivateVPC
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref 'AWS::Region'
      CidrBlock: 10.0.2.0/24
      MapPublicIpOnLaunch: true

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref PubPrivateVPC
      AvailabilityZone: !Select
        - 0
        - Fn::GetAZs: !Ref 'AWS::Region'
      CidrBlock: 10.0.3.0/24
      MapPublicIpOnLaunch: false

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref PubPrivateVPC
      AvailabilityZone: !Select
        - 1
        - Fn::GetAZs: !Ref 'AWS::Region'
      CidrBlock: 10.0.4.0/24
      MapPublicIpOnLaunch: false

 ## INTERNET GATEWAY
  InternetGateway:
    Type: AWS::EC2::InternetGateway

  GatewayToInternet:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref PubPrivateVPC
      InternetGatewayId: !Ref InternetGateway

  ## PUBLIC ROUTING
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref PubPrivateVPC

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: GatewayToInternet
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable

  ## NAT GATEWAY
  NatGateway:
    Type: AWS::EC2::NatGateway
    DependsOn: NatPublicIP
    Properties:
      SubnetId: !Ref PublicSubnet1
      AllocationId: !GetAtt NatPublicIP.AllocationId

  ## ELASTIC IP
  NatPublicIP:
    Type: AWS::EC2::EIP
    DependsOn: PubPrivateVPC
    Properties:
      Domain: vpc

  ## PRIVATE ROUTING
  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref PubPrivateVPC

  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      NatGatewayId: !Ref NatGateway
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable

  SageMakerExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      Policies:
        - PolicyName: s3-access
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Sid: AllowS3
                Effect: Allow
                Action:
                  - s3:GetObject
                  - s3:PutObject
                  - s3:DeleteObject
                  - s3:ListBucket
                Resource: '*'
        - PolicyName: iam-access
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Sid: AllowGetIAMInfo
                Effect: Allow
                Action:
                  - iam:GetRole
                  - iam:GetRolePolicy
                Resource: 'arn:aws:iam::*:role/*SageMakerExecutionRole*'
        - PolicyName: comprehend-pass-role
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Sid: AllowComprehendPassRole
                Effect: Allow
                Action:
                  - iam:PassRole
                Resource: 'arn:aws:iam::*:role/*SageMakerExecutionRole*'
        - PolicyName: kms-access
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Sid: GetEncryptionKeys
                Effect: Allow
                Action:
                  - kms:CreateKey
                  - kms:Get*
                  - kms:List*
                Resource: 'arn:aws:kms:*'
        - PolicyName: opensearchfullaccess
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Sid: Allowopensearchfullaccess
                Effect: Allow
                Action:
                  - es:*
                Resource: '*'
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Sid: AssumeOtherServiceRoles
            Effect: Allow
            Principal:
              Service:
                - sagemaker.amazonaws.com
                - comprehend.amazonaws.com
                - kendra.amazonaws.com
                - es.amazonaws.com
            Action:
              - sts:AssumeRole
      ManagedPolicyArns:
        - 'arn:aws:iam::aws:policy/AmazonSageMakerFullAccess'
        - 'arn:aws:iam::aws:policy/AmazonS3FullAccess'
        - 'arn:aws:iam::aws:policy/AWSCloudFormationFullAccess'
        - 'arn:aws:iam::aws:policy/AWSCodePipeline_FullAccess'
        - 'arn:aws:iam::aws:policy/AmazonTextractFullAccess'
        - 'arn:aws:iam::aws:policy/ComprehendFullAccess'
        - 'arn:aws:iam::aws:policy/ComprehendMedicalFullAccess'
        - 'arn:aws:iam::aws:policy/AmazonKendraFullAccess'
        - 'arn:aws:iam::aws:policy/AmazonOpenSearchServiceFullAccess'

  SageMakerInstanceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: SM Domain SG
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0
      VpcId: !Ref PubPrivateVPC

  SageMakerInstanceSecurityGroupIngress:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      GroupId: !Ref SageMakerInstanceSecurityGroup
      IpProtocol: tcp
      ToPort: 65535
      FromPort: 0
      SourceSecurityGroupId: !Ref SageMakerInstanceSecurityGroup
    DependsOn: SageMakerInstanceSecurityGroup

  StudioDomain:
    Type: AWS::SageMaker::Domain
    DeletionPolicy: Retain
    UpdateReplacePolicy: Retain
    Properties:
      AppNetworkAccessType: VpcOnly
      AppSecurityGroupManagement: Customer
      AuthMode: IAM
      DefaultUserSettings:
          ExecutionRole: !GetAtt SageMakerExecutionRole.Arn
          SecurityGroups:
           - !Ref SageMakerInstanceSecurityGroup
          JupyterServerAppSettings:
            DefaultResourceSpec:
              InstanceType: system
              SageMakerImageArn: !FindInMap
                - RegionMap
                - !Ref 'AWS::Region'
                - jupyter
      DomainName: !Ref DomainName
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
      VpcId: !Ref PubPrivateVPC

  UserProfile:
    Type: AWS::SageMaker::UserProfile
    DeletionPolicy: Retain
    UpdateReplacePolicy: Retain
    Properties:
      DomainId: !GetAtt StudioDomain.DomainId
      UserProfileName: !Ref UserProfileName
      UserSettings:
        ExecutionRole: !GetAtt SageMakerExecutionRole.Arn

  JupyterApp:
    Type: AWS::SageMaker::App
    DeletionPolicy: Retain
    UpdateReplacePolicy: Retain
    DependsOn: UserProfile
    Properties:
      AppName: default
      AppType: JupyterServer
      DomainId: !GetAtt StudioDomain.DomainId
      UserProfileName: !Ref UserProfileName

  SecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: SG for OS
      SecurityGroupIngress:
      - IpProtocol: TCP
        FromPort: 0
        ToPort: 65535
        SourceSecurityGroupId: !Ref SageMakerInstanceSecurityGroup
      VpcId: !Ref PubPrivateVPC

  OpenSearchServiceDomain:
    Type: AWS::OpenSearchService::Domain
    Properties:
     DomainName: !Ref DomainNameopensearch
     ClusterConfig:
      InstanceCount: '1'
      InstanceType: 'm5.xlarge.search'
     EBSOptions:
      EBSEnabled: true
      Iops: '0'
      VolumeSize: '10'
      VolumeType: 'gp2'
     AccessPolicies:
      Version: '2012-10-17'
      Statement:
        Effect: Allow
        Principal:
          AWS: !GetAtt SageMakerExecutionRole.Arn
        Action: 'es:*'
        Resource: !Sub 'arn:aws:es:${AWS::Region}:${AWS::AccountId}:domain/${DomainNameopensearch}/*'
     AdvancedSecurityOptions:
      Enabled: true
      MasterUserOptions:
       MasterUserARN: !GetAtt SageMakerExecutionRole.Arn
     NodeToNodeEncryptionOptions:
      Enabled: true
     EncryptionAtRestOptions:
      Enabled: true
     DomainEndpointOptions:
      EnforceHTTPS: true
     VPCOptions:
        SecurityGroupIds:
        - !Ref SecurityGroup
        SubnetIds:
        - !Ref PrivateSubnet1

Outputs:
  Opensearchhostid:
    Description: The opensearch host id
    Value: !GetAtt OpenSearchServiceDomain.DomainEndpoint
